# ImmuBPI

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_main.py  train_bash.sh
configs/: binding_config.yaml  example_config.yaml  immunogenicity_config.yaml  presentation_config.yaml
data/: __init__.py  constant.py  data_utils.py  dataloader_utils.py  dataset.py
dataset/: dataset_register_table.csv  example.csv  example_nolabel.csv
dataset/const/: AA_dict.npy  hla_type2seq.npy
loss/: __init__.py  logit_nll_loss.py
models/: __init__.py  positionalencoding.py  transformer_fusion.py
scripts/: generate_embedding.py  get_model_results.py  plot_attention_map.py  run_inference.py
trainer/: __init__.py  trainer.py
utils/: __init__.py  cca_score.py  config_utils.py  datasave.py  logger.py  performance_evaluator.py  seed_utils.py
webui/: config.yaml  pipeline.py  webui.py
