[project.urls]
"Homepage" = "https://github.com/WangLabTHU/ImmuBPI"
"Source Code" = "https://github.com/WangLabTHU/ImmuBPI"

[project]
name = "immubpi"
description = "Cross-task interpretability through unified modeling reveals a universal shortcut bias in neoantigen prediction"
authors = [
  { name="Ziting Zhang", email="zzt23@mails.tsinghua.edu.cn" },
]
requires-python = ">=3.8, <3.12"
license = { file = "LICENSE" }

# TODO check
dependencies = [
]

[tool.ruff]
target-version = "py38"
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "W605", "C408"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
